version iterators 1.0